--- a/package.json
+++ b/package.json
@@ -17,6 +17,20 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@ngxs/devtools-plugin": "^19.0.0-dev.master-fb07d3f",
+    "@ngxs/logger-plugin": "^19.0.0-dev.master-fb07d3f",
+    "@ngxs/store": "^19.0.0-dev.master-fb07d3f",
+    "@taiga-ui/cdk": "^4.26.1",
+    "@taiga-ui/core": "^4.26.1",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.26.1",
+    "@taiga-ui/kit": "^4.26.1",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.0",
+    "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -26,6 +40,8 @@
     "@angular/cli": "^19.2.0",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
+    "@types/node": "^22.13.9",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
