--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.2.0",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
@@ -21,6 +22,7 @@
     "@ngxs/devtools-plugin": "^19.0.0-dev.master-fb07d3f",
     "@ngxs/logger-plugin": "^19.0.0",
     "@ngxs/store": "^19.0.0-dev.master-fb07d3f",
+    "@taiga-ui/addon-table": "^4.31.0",
     "@taiga-ui/cdk": "^4.26.1",
     "@taiga-ui/core": "^4.26.1",
     "@taiga-ui/event-plugins": "^4.0.2",
